<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatesFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/headerline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:background="@drawable/borders"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"

        android:orientation="horizontal">
        <TextView
            android:text="@string/text_states_ut"
            android:layout_width="0dp"
            android:textSize="11sp"
            android:textColor="@color/colorPrimaryText"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_weight="1.6"
            />

        <TextView
            android:text="@string/text_confirmed"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="11sp"
            android:textColor="@color/colorRed"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"/>

        <TextView
            android:text="@string/text_active"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:textSize="11sp"
            android:textColor="@color/colorBlue"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"/>

        <TextView
            android:text="@string/text_recovered"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:textSize="11sp"
            android:textColor="@color/colorGreen"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"/>


        <TextView
            android:text="@string/text_deceased"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/colorGray"
            android:textSize="11sp"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/states_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/headerline"
        android:scrollbars="vertical"/>
    </RelativeLayout>
</FrameLayout>