<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FiguresFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="1">

             <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/textGrid"
                   android:text="@string/text_time_update"
                   android:layout_centerVertical="true"
                   android:paddingLeft="30dp"
                   android:textSize="20sp"/>

        </RelativeLayout>

        <GridLayout
            android:columnCount="2"
            android:rowCount="3"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="14dp"
            android:layout_weight="7">

            <!-- Row 1 -->

            <!-- column 1 -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardBackgroundColor="@color/colorLightRed"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="906"
                        android:textAlignment="center"
                        android:textColor="@color/colorRed"
                        android:layout_gravity="center"
                        android:textSize="30sp"
                        android:padding="20dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_confirmed"
                        android:textAlignment="center"
                        android:textColor="@color/colorRed"
                        android:layout_gravity="center"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Column 2 -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardBackgroundColor="@color/colorLightBlue"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="803"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlue"
                        android:layout_gravity="center"
                        android:padding="20dp"
                        android:textSize="30sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_active"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlue"
                        android:layout_gravity="center"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Row 2 -->

            <!-- column 1 -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardBackgroundColor="@color/colorLightGreen"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="83"
                        android:textAlignment="center"
                        android:textColor="@color/colorGreen"
                        android:layout_gravity="center"
                        android:padding="20dp"
                        android:textSize="30sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_recovered"
                        android:textAlignment="center"
                        android:textColor="@color/colorGreen"
                        android:layout_gravity="center"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Column 2 -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardBackgroundColor="@color/colorLightGray"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="20"
                        android:textAlignment="center"
                        android:textColor="@color/colorGray"
                        android:padding="20dp"
                        android:layout_gravity="center"
                        android:textSize="30sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_deceased"
                        android:textAlignment="center"
                        android:textColor="@color/colorGray"
                        android:layout_gravity="center"
                        android:textSize="18sp"
                        android:textStyle="bold"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>


        <GridLayout
            android:columnCount="1"
            android:rowCount="1"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.9"
            android:padding="14dp">

            <!-- Row 1 -->
            <!-- column 1 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="10dp"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/text_updates"
                        android:textSize="15sp"
                        android:textStyle="bold"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>
    </LinearLayout>

</FrameLayout>